# read-my-doc

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  sample_doc.txt
.github/: CONTRIBUTING.md  dependabot.yml  pull_request_template.md
.playwright-mcp/: page-2026-04-04T14-34-03-354Z.yml  page-2026-04-04T14-36-16-050Z.yml  (+39 more)
.stitch/: DESIGN.md  SITE.md  (+5 more)
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_users_and_refresh_tokens.py  0002_create_documents_and_chunks.py  0003_create_chat_tables.py  0004_add_token_usage.py  0005_add_name_phone_to_users.py
backend/app/: config.py  dependencies.py  main.py
backend/app/auth/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/chat/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/common/: database.py  exceptions.py  pagination.py  security.py
backend/app/documents/: chunker.py  models.py  parser.py  repository.py  router.py  schemas.py  service.py
backend/app/rag/: embedder.py  generator.py  prompts.py  reranker.py  retriever.py
backend/tasks/: document_tasks.py  worker.py
backend/tests/: conftest.py  test_health.py
backend/tests/auth/: test_auth.py
backend/tests/documents/: test_chunker.py  test_documents.py  test_parser.py
backend/tests/eval/: conftest.py  test_citation_accuracy.py  test_faithfulness.py
backend/tests/eval/fixtures/: golden.jsonl  sample_report.txt  technical_overview.md
backend/tests/rag/: test_chunker_retriever.py  test_generator.py
(+52 files in other folders)
